chore: initial site + iss workflow

--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -2,8 +2,9 @@
 
 on:
   schedule:
-    - cron: "0 12 * * *"    # runs daily at 12:00 UTC
-  workflow_dispatch:       # allow manual trigger
+    # Runs at 12:00 UTC (noon) every day
+    - cron: "0 12 * * *"
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   collect-iss-data:
@@ -15,30 +16,36 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: prime-cache-d9751e1
-        id: prime-cache-d9751e1
+      - name: Cache Python packages
+        id: cache_step
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip
+          path: ~/.uv
           key: cache-d9751e1
 
-      - name: Show cache result
-        run: echo "Cache hit: ${{ steps.prime-cache-d9751e1.outputs.cache-hit }}"
+      - name: prime-cache-d9751e1
+        run: |
+          if [ "${{ steps.cache_step.outputs.cache-hit }}" == "true" ]; then
+            echo "Cache hit!"
+          else
+            echo "Cache miss!"
+          fi
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
       - name: Fetch ISS location data
-        run: |
-          uv run --with requests python << 'PY'
+        run: | # python
+          uv run --with requests python << 'EOF'
           import requests
+
           data = requests.get('http://api.open-notify.org/iss-now.json').text
           with open('iss-location.jsonl', 'a') as f:
               f.write(data + '\n')
-          PY
+          'EOF'
 
       - name: Commit and push changes
-        run: |
+        run: | # shell
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add iss-location.jsonl
