--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -22,7 +22,7 @@ jobs:
           path: ~/.uv
           key: cache-d9751e1
 
-      - name: Show cache result
+      - name: prime-cache-d9751e1
         run: |
           if [ "${{ steps.cache_step.outputs.cache-hit }}" == "true" ]; then
             echo "Cache hit!"
