fix: match cache key and step name for assignment

--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -2,8 +2,9 @@
 
 on:
   schedule:
+    # Runs at 12:00 UTC (noon) every day
     - cron: "0 12 * * *"
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   collect-iss-data:
@@ -16,34 +17,35 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cache Python packages
-        id: cache_step
+        id: cache-step
         uses: actions/cache@v4
         with:
           path: ~/.uv
-          key: cache-d9751e1
+          key: cache-d9751e1   # ✅ required key
 
-      - name: prime-cache-d9751e1   # ✅ must be exactly this
+      - name: prime-cache-d9751e1   # ✅ required step name
         run: |
-          if [ "${{ steps.cache_step.outputs.cache-hit }}" == "true" ]; then
+          if [ "${{ steps.cache-step.outputs.cache-hit }}" == "true" ]; then
             echo "Cache hit!"
           else
             echo "Cache miss!"
           fi
-
+          
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
       - name: Fetch ISS location data
-        run: |
+        run: | # python
           uv run --with requests python << 'EOF'
           import requests
+
           data = requests.get('http://api.open-notify.org/iss-now.json').text
           with open('iss-location.jsonl', 'a') as f:
               f.write(data + '\n')
           'EOF'
 
       - name: Commit and push changes
-        run: |
+        run: | # shell
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add iss-location.jsonl
