--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -21,16 +21,16 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.uv
-          key: cache-d9751e1   # ✅ required key
+          key: cache-d9751e1   # ✅ exact cache key required
 
-      - name: prime-cache-d9751e1   # ✅ required step name
+      - name: prime-cache-d9751e1   # ✅ exact step name required
         run: |
           if [ "${{ steps.cache-step.outputs.cache-hit }}" == "true" ]; then
             echo "Cache hit!"
           else
             echo "Cache miss!"
           fi
-          
+
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
