fix: corrected cache path and prime-cache step

--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -13,17 +13,20 @@ jobs:
       contents: write
 
     steps:
+      # Step 1: Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Cache Python packages (repo-relative folder)
       - name: Cache Python packages
         id: cache-step
         uses: actions/cache@v4
         with:
-          path: ~/.uv
-          key: cache-d9751e1 # ✅ exact cache key required
+          path: .uv          # relative to repo root
+          key: cache-d9751e1
 
-      - name: prime-cache-d9751e1   # ✅ exact step name required
+      # Step 3: Prime cache
+      - name: prime-cache-d9751e1
         run: |
           if [ "${{ steps.cache-step.outputs.cache-hit }}" == "true" ]; then
             echo "Cache hit!"
@@ -31,23 +34,11 @@ jobs:
             echo "Cache miss!"
           fi
 
+      # Step 4: Install uv
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
+      # Step 5: Fetch ISS location data
       - name: Fetch ISS location data
-        run: | # python
-          uv run --with requests python << 'EOF'
-          import requests
-
-          data = requests.get('http://api.open-notify.org/iss-now.json').text
-          with open('iss-location.jsonl', 'a') as f:
-              f.write(data + '\n')
-          'EOF'
-
-      - name: Commit and push changes
-        run: | # shell
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add iss-location.jsonl
-          git commit -m "Update ISS position data [skip ci]" || exit 0
-          git push
+        run: |
+          uv run --with requests pytho
