--- a/.github/workflows/iss-location.yml
+++ b/.github/workflows/iss-location.yml
@@ -41,4 +41,19 @@ jobs:
       # Step 5: Fetch ISS location data
       - name: Fetch ISS location data
         run: |
-          uv run --with requests pytho
+          uv run --with requests python << 'EOF'
+          import requests
+
+          data = requests.get('http://api.open-notify.org/iss-now.json').text
+          with open('iss-location.jsonl', 'a') as f:
+              f.write(data + '\n')
+          'EOF'
+
+      # Step 6: Commit & push changes
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add iss-location.jsonl
+          git commit -m "Update ISS position data [skip ci]" || exit 0
+          git push
